import java.net.Socket;

class EchoServerThread extends Thread {
   static final String endMessage = ".";
   MyStreamSocket myDataSocket;
   //Socket socket; !--SSL CODE--!
   //EchoServerThread(MyStreamSocket socket){this.socket = socket;} !--SSL CODE--!

   EchoServerThread(MyStreamSocket myDataSocket) {
      this.myDataSocket = myDataSocket;
  }
 
   public void run( ) {
      boolean done = false;
      String message;
      try {
         while (!done) {
             message = myDataSocket.receiveMessage( );
/**/
             if ((message.trim()).equals (endMessage)){
                //Session over; close the data socket.
/**/            System.out.println("Session over.");
                myDataSocket.close( );
                done = true;
             } //end if
             else {
                // Now send the echo to the requester
                myDataSocket.sendMessage(message);
             } //end else
          } //end while !done
        }// end try
        catch (Exception ex) {
           System.out.println("Exception caught in thread: " + ex);
        } // end catch
   } //end run
} //end class 
